--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "md5": "^2.2.1",
     "mocha": "^8.0.1",
     "rimraf": "^3.0.2",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "socket.io": "^3.0.0"
   }
 }
